--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,22 @@
-[tool.poetry]
-name = "kart_docs"
+[project]
+name = "home-design-docs"
 version = "0.1.0"
 description = ""
-authors = ["Rubén <ruben.jimenezmejias@gmail.com>"]
 readme = "README.md"
-package-mode = false
-
-[tool.poetry.dependencies]
-python = "^3.12"
-mkdocs = "^1.6.1"
-mkdocs-material = "^9.6.14"
-mkdocs-exporter = "^6.2.0"
-playwright = "^1.52.0"
-pypdf = "^5.6.1"
-shell-gpt = "^1.4.5"
-
+requires-python = "==3.12.3"
+authors = [{ name = "Ruben", email = "ruben.jimenezmejias@gmail.com" }]
+dependencies = [
+  "mkdocs==1.6.1",
+  "mkdocs-material==9.6.14",
+  "mkdocs-exporter==6.2.0",
+  "playwright==1.52.0",
+  "pypdf==5.6.1",
+  "shell-gpt==1.4.5",
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools>=69"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = []
